--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <h3><u>Technical Skills</u></h3>
 
     <ul>
-        <li>Proficient in programming languages like <u>Python</u> and <u>C</u></li>
-        <li>Skilled in <u>HTML5</u> and <u>CSS3</u></li>
+        <li>Proficient in programming languages like <u>Python</u>,<u>C</u> and <u>R</u></li>
+        <li>Skilled in <u>HTML5</u>,<u>CSS3</u> and <u>SQL</u></li>
         <li>Good with designing tools like <u>Canva</u> and <u>Photoshop</u></li>
     </ul>
 
